Update notebook for Github/Colab integration

--- a/Probabilistic_BLAST.ipynb
+++ b/Probabilistic_BLAST.ipynb
@@ -32,20 +32,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gJuNnAtQl-Ch",
-        "outputId": "6c8aa293-4f6b-4f9b-c75d-bed3bfc9e7cd"
+        "id": "gJuNnAtQl-Ch"
       },
       "source": [
-        "# To run this code, you should have the data (genome sequence and confidences) in the same folder as this file.\n",
-        "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# Update this if using a different file structure\n",
-        "%cd '/content/drive/MyDrive/ProbaBLAST'\n",
+        "!git clone https://github.com/alexbertrand3/ProbaBLAST\n",
+        "%cd ProbaBLAST\n",
         "\n",
         "import json\n",
         "import math\n",
@@ -55,17 +46,8 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "/content/drive/MyDrive/ProbaBLAST\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -76,15 +58,15 @@
         "# load the library sequence and confidence values\n",
         "# Data is a portion (~600 kilobases) of the predicted chromosome 22 of an ancestral Boreoeutherian (a sub-type of placental mammals)\n",
         "\n",
-        "with open('sequence.txt') as f1:\n",
+        "with open('data/sequence.txt') as f1:\n",
         "    library_seq = f1.readline().upper()\n",
         "\n",
-        "with open('confidence.txt') as f2:\n",
+        "with open('data/confidence.txt') as f2:\n",
         "    conf = f2.readline().split()\n",
         "    conf = np.asarray([float(x) for x in conf])\n",
         "    conf_comp = (1 - conf)/3      # (comp --> complement). The probability for each of the non-predicted nucleotides. Assumes equal probabilities for each."
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -115,7 +97,7 @@
         "    else:\n",
         "        return nuc"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +112,7 @@
         "    else:\n",
         "        lib[word] = [entry]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +145,7 @@
         "\n",
         "# print(word_stats(library_seq, conf, 7, p=0.7))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +173,7 @@
       "metadata": {
         "id": "JbEm2CigPxoN"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +193,7 @@
       "metadata": {
         "id": "B6o4kPumlQiN"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +237,7 @@
         "            add_to_word_list(lib, word, i)\n",
         "    return lib"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +250,7 @@
         "    with open(file_path, 'w') as f:\n",
         "        json.dump(lib, f, indent=indent)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +263,7 @@
         "    with open(file_path) as f:\n",
         "        return json.load(f)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +277,7 @@
         "lib = build_library(library_seq, conf, 7)\n",
         "save_library(lib, 'test_lib_w7.json', indent=4)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +304,7 @@
         "# Alternative coefficient (inspired by entropy)\n",
         "# 1 - log4 (conf[i])"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -436,7 +418,7 @@
         "        i, j = trace[i, j]\n",
         "    return best_score, (S_str, T_str)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +532,7 @@
         "        # print('\\n')\n",
         "    return outputs"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,7 +575,7 @@
         "'''\n",
         "pass"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -677,7 +659,7 @@
         "    output = ''.join(split)\n",
         "    return output"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -695,9 +677,9 @@
         "id": "O6Vw3WQaVMoy"
       },
       "source": [
-        "lib = load_library('test_lib_w7.json')"
+        "lib = load_library('data/test_lib_w7.json')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +706,7 @@
         "    header = (alignment[0], alignment[1], alignment[2])\n",
         "    print_alignment(alignment[3][0], alignment[3][1], header=header)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
