--- a/Probabilistic_BLAST.ipynb
+++ b/Probabilistic_BLAST.ipynb
@@ -275,7 +275,7 @@
         "'''Run this if you don't already have a library saved as a file!'''\n",
         "\n",
         "lib = build_library(library_seq, conf, 7)\n",
-        "save_library(lib, 'test_lib_w7.json', indent=4)"
+        "save_library(lib, 'data/test_lib_w7.json', indent=4)"
       ],
       "execution_count": null,
       "outputs": []
